# litex_m2sdr

./: .gitignore  .gitmodules  .ignore  CHANGELOG.md  CLAUDE.md  LICENSE  PR.md  README.md  build.py  flash.py  flash_bitstream_SRAM.sh  litex_m2sdr.py  litex_m2sdr_led_test.py  litex_m2sdr_platform.py  pcie_radio.py  pcie_radio_platform.py  pytest.ini  release.py  setup.py  stream.cfg  test_clks.py  test_si5351_aux_clk.py  test_si5351_clks.py
.github/workflows/: build.yml  ci.yml
app/gnuradio/: README.md  m2sdr_fm_receiver.grc  m2sdr_test_rx.grc  test_fm_rx.grc  test_rx.grc  test_tx_rx.grc
doc/: 2t2r-122mhz-tx.md  debugging-guide.md  rf-lab.md  rfic-transport-formats.md  rom_size_debug_playbook.md  rom_size_investigation.md  sata-bandwidth-investigation.md  sata-validation.md  sata-workflows.md
doc/hosts/: jetson-orin.md  orangepi-5-max.md  raspberry-pi-5.md  raspberry-pi-5_FM.grc  windows-macos.md
doc/ptp/: README.md  ptp4l-m2sdr-hardware.cfg  ptp4l-m2sdr-software.cfg
gateware/: cdcm6208.py  header.py  measurement.py  pps.py  qpll.py  sampling.py  si5351.py  si5351_i2c.py  spi.py  timestamp.py
gateware/ad9361/: __init__.py  agc.py  bitmode.py  core.py  phy.py  prbs.py  spi.py
litescope/: litescope_cli.py  litex_server.sh
litex_m2sdr/: __init__.py  wr_helper.py
litex_m2sdr/doc/: custom_processing_example.md
litex_m2sdr/gateware/: capability.py  cdc.py  clock_discipline.py  custom_processing.py  etherbone.py  gpio.py  header.py  layouts.py  led.py  loopback.py  measurement.py  pcie.py  pps.py  ptp_discipline.py  ptp_identity.py  qpll.py  rfic.py  sata.py  scheduler.py  si5351.py  time.py  vcxo.py  vrt.py
litex_m2sdr/software/: __init__.py  autotest.py  build.py  fetch_cimgui.py  flash.py  reload_driver.sh  rescan.py  rescan_pci.sh
litex_m2sdr/software/soapysdr/: CMakeLists.txt  LiteXM2SDRDevice.cpp  LiteXM2SDRDevice.hpp  LiteXM2SDRRegistration.cpp  LiteXM2SDRStreaming.cpp  LiteXM2SDRUDP.cpp  LiteXM2SDRUDP.hpp  LiteXM2SDRUDPRx.cpp  PacketsFIFO.h  README.md  StreamPacket.h  TIMESTAMP_TX_README.md  build_timestamp_test.sh  gqrx_liteeth.sh  test_play.py  test_queue_reading.py  test_record.py  test_thread_loops.py  test_time.py  test_timestamp_tx.py  test_vrt_rx.py
litex_m2sdr/software/soapysdr/build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
litex_m2sdr/software/user/: .gitignore  CMakeLists.txt  Makefile  README.md  fm_tx.py  imgui_sdl_gl3_bridge.cpp  m2sdr_analysis.py  m2sdr_cal  m2sdr_check.c  m2sdr_cli.c  m2sdr_cli.h  m2sdr_common.h  m2sdr_eb_util  m2sdr_eb_util.c  m2sdr_fm_radio.py  m2sdr_fm_rx  m2sdr_fm_rx.c  m2sdr_fm_tx  m2sdr_fm_tx.c  m2sdr_gen  m2sdr_gen.c  m2sdr_getopt.c  m2sdr_getopt.h  m2sdr_gpio  m2sdr_gpio.c  m2sdr_host_queue.c  m2sdr_host_queue.h  m2sdr_lab  m2sdr_lab_gui.c  m2sdr_measure  m2sdr_phase  m2sdr_play  m2sdr_play.c  m2sdr_record  m2sdr_record.c  m2sdr_rf  m2sdr_rf.c  m2sdr_rx_stream_shm.c  m2sdr_sata.c  m2sdr_sata_capture_volume.c  (+33 more)
litex_m2sdr/software/user/ad9361/: ad9361.c  ad9361.h  ad9361_api.c  common.h  util.c  util.h
litex_m2sdr/software/user/include/: m2sdr_host_ring.h  m2sdr_json.h
litex_m2sdr/software/user/lib/: m2sdr_host_ring.c  m2sdr_json.c
litex_m2sdr/software/user/libliteeth/: etherbone.c  etherbone.h  liteeth_udp.c  liteeth_udp.h
litex_m2sdr/software/user/liblitepcie/: liblitepcie.h  litepcie_dma.c  litepcie_dma.h  litepcie_helpers.c  litepcie_helpers.h
litex_m2sdr/software/user/libm2sdr/: .gitignore  libm2sdr.h  m2sdr.h  m2sdr.pc  m2sdrConfig.cmake.in  m2sdrConfigVersion.cmake.in  m2sdr_ad9361_spi.c  m2sdr_ad9361_spi.h  m2sdr_config.h  m2sdr_device.c  m2sdr_flash.c  m2sdr_flash.h  m2sdr_hal_liteeth.c  m2sdr_hal_litepcie.c  m2sdr_internal.h  m2sdr_platform.c  m2sdr_platform.h  m2sdr_rf.c  m2sdr_rfic_ad9361.c  m2sdr_rfic_iface.h  m2sdr_rfic_mock.c  m2sdr_rfic_registry.c  m2sdr_sata.c  m2sdr_si5351_i2c.c  m2sdr_si5351_i2c.h  m2sdr_sigmf.c  m2sdr_sigmf.h  m2sdr_stream.c  m2sdr_utils.c
litex_m2sdr/software/user/scan_ui/: imgui_sdl_gl3_bridge.h  m2sdr_colormaps_gqrx.h
litex_m2sdr/software/user/tests/: fake_liteeth.py  test_fake_liteeth.py  test_libm2sdr.c  test_m2sdr_analysis_tools.py  test_m2sdr_host_queue.c  test_m2sdr_lab.py  test_m2sdr_sata_cli.c  test_m2sdr_sata_hostio.c  test_m2sdr_sigmf.c  test_sigmf_capture_smoke.c  test_sigmf_cli.c  test_sigmf_info_cli.c
patches/wr-cores/: 0001-xwr_subsystem-mux-class.patch
scripts/: Makefile  evaluate_sample_formats.py  flash_gateware.sh  github_release.py  latency_probe.c  loopback_selftest.c  loopback_selftest.sh  loopback_selftest_all_images.sh  m2sdr_pcie_time_sync.py  m2sdr_ptp_check.py  m2sdr_sata_transport_check.py  test_agc.py  test_clks.py  test_dashboard.py  test_led.py  test_pcie_ltssm.py  test_time.py  test_xadc.py  timed_tx_selftest.c
sim/: gtkwave_config.sav  header_tb.py  scheduler_opti_tb.py  scheduler_simple_tb.py  scheduler_tb.py
sim/scheduler_sim_workflow/: ConfigLoader.py  ExperimentManager.py  (+7 more)
software/: __init__.py  autotest.py  build.py  build_driver.py  flash.py  rescan.py
software/soapysdr/: CMakeLists.txt  LiteXM2SDRDevice.cpp  LiteXM2SDRDevice.hpp  LiteXM2SDRRegistration.cpp  LiteXM2SDRStreaming.cpp  LiteXM2SDRUDPRx.cpp  LiteXM2SDRUDPRx.hpp  README.md  etherbone.c  etherbone.h  test_play.py  test_record.py  test_time.py
test/: pcie_bridge.py  test_ad9361.py  test_agc.py  test_capability.py  test_cdc.py  test_cli_args.py  test_clks.py  test_clock_discipline.py  test_dashboard.py  test_github_release.py  test_gpio.py  test_hardware_time.py  test_header.py  test_led.py  test_loopback.py  test_measurement.py  test_pcie_ltssm.py  test_pcie_time_sync_script.py  test_pcie_workaround.py  test_play.py  test_pps.py  test_prbs_sim.py  test_ptp_check_script.py  test_ptp_discipline.py  test_ptp_identity.py  test_qpll.py  test_record.py  test_release.py  test_rfic.py  test_sample_format_loss.py  test_sata_bist.py  test_sata_stream_tap.py  test_sata_streamers.py  test_scheduler.py  test_shared_etherbone.py  test_si5351.py  test_soc_clk10_discipline.py  test_soc_eth_ptp.py  test_soc_eth_sata.py  test_spi.py  (+6 more)
(+106 files in other folders)
